<resources>
    <string name="app_name" translatable="false">Taller Robinauto</string>
    <string name="textoCorreo">Correo electrónico</string>
    <string name="textoContraseña">Contraseña</string>
    <string name="textoIniciarSesion">Iniciar sesión</string>
    <string name="textoEnlaceRegistro">¿No tienes cuenta?, ¡Regístrate!</string>
    <string name="textoVolverInicioSesion">Volver inicio de sesión</string>
    <string name="textoTvCorreo">Email</string>
    <string name="textoTvContrasenya">Contraseña</string>
    <string name="textoTVtextoInfoIncioSesion">Indica tus datos para acceder</string>
    <string name="textoTvIniciaSesion">Iniciar sesión</string>
    <string name="textoTvContacto">tallerrobinauto@gmail.com</string>
    <string name="textoTvRegistro">Registrarse</string>
    <string name="textoTVtextoInfoRegistrarse">Rellena el formulario para registrarte</string>
    <string name="textoRegistrarse">Registrarse</string>
    <string name="textoNombre">Nombre</string>
    <string name="textoApellidos">Apellidos</string>
    <string name="textoConfirmarContrasenya">Confirmar contraseña</string>
    <string name="textoTvSeleccionarPerfil">Seleccionar perfil</string>
    <string name="textoTvUsuarioAdmin">Usuario:</string>
    <string name="textoTelefono">Teléfono</string>
    <string name="textoAyudaObligatorio">Obligatorio*</string>
    <string name="textoAyudaRegistro">Obligatorio*</string>
    <string name="textoTyCIntroduccion">Bienvenido a Taller Robinauto. Al utilizar nuestros servicios, aceptas cumplir con los siguientes términos y condiciones. Por favor, léelos detenidamente.</string>
    <string name="textoTyCUsoServicio">- Uso del Servicio: Esta app es para mayores de 18 años. Úsala solo para gestionar servicios automotrices de forma legal. Está prohibido el uso indebido, como actividades ilegales o difusión de contenido ofensivo.</string>
    <string name="textoTyCPropiedadIntelectual">- Propiedad Intelectual: Todo el contenido de la app (imágenes, logotipos, diseño) es propiedad de Robinauto y no puede ser usado sin permiso.</string>
    <string name="textoTyCPrivacidad">- Privacidad: Protegemos tus datos personales conforme a nuestra política de privacidad. Consulta más detalles en Política de Privacidad.</string>
    <string name="textoTyCContacto">Contacto: Para consultas, escribe a tallerrobinauto@gmail.com</string>
    <string name="textoTyCCheckboxUsoYServicio">Acepto el uso del servicio.</string>
    <string name="textoTyCCheckboxPropiedadIntelectual">Acepto los términos de propiedad intelectual.</string>
    <string name="textoTyCCheckboxPrivacidad">Acepto la política de privacidad.</string>
    <string name="textoTyCCheckboxPromociones">Quiero recibir promociones y actualizaciones (opcional).</string>
    <string name="textoTyCCheckboxAceptarTodo">Aceptar todos los términos y condiciones.</string>
    <string name="textoTvbotonDesactivado">Botón desactivado, complete todos los campos</string>
    <string-array name="tipo_usuarios">
        <item>Administrador</item>
        <item>Administrativo</item>
        <item>Mecanico jefe</item>
        <item>Mecanico</item>
        <item>Cliente</item>
    </string-array>
    <string-array name="tipo_empleados">
        <item>Administrativo</item>
        <item>Mecanico jefe</item>
        <item>Mecanico</item>
    </string-array>
    <string-array name="diagnosticos_array">
        <item>Ajuste de frenos</item>
        <item>Cambio de aceite</item>
        <item>Sustitución de batería</item>
        <item>Alineación de ruedas</item>
        <item>Diagnóstico eléctrico</item>
        <item>Inspección de suspensión</item>
        <item>Sustitución de filtro de aire</item>
        <item>Revisión del sistema de escape</item>
        <item>Reparación de transmisión</item>
        <item>Servicio de climatización</item>
    </string-array>
    <string-array name="tareas_mecanicos">
        
        <item>Revisar desgaste de pastillas y discos de freno</item>
        <item>Ajustar el sistema de frenos, incluyendo el freno de mano</item>
        <item>Sustituir el líquido de frenos si es necesario</item>
        
        <item>Drenar el aceite usado y limpiar el cárter</item>
        <item>Sustituir el filtro de aceite</item>
        <item>Reabastecer el motor con aceite nuevo</item>
        
        <item>Comprobar el estado de la batería actual</item>
        <item>Desconectar y retirar la batería defectuosa</item>
        <item>Instalar la nueva batería y verificar el sistema eléctrico</item>
        
        <item>Inspeccionar el desgaste de los neumáticos</item>
        <item>Ajustar los ángulos de alineación (camber, caster, toe)</item>
        <item>Realizar pruebas de conducción para confirmar la alineación</item>
        
        <item>Escanear el sistema eléctrico con OBD-II</item>
        <item>Revisar cableado, fusibles y conexiones principales</item>
        <item>Realizar pruebas de carga del alternador</item>
        
        <item>Verificar amortiguadores, muelles y bujes</item>
        <item>Inspeccionar la barra estabilizadora y rótulas</item>
        <item>Realizar pruebas de conducción para identificar ruidos</item>
        
        <item>Retirar el filtro de aire usado</item>
        <item>Limpiar el compartimiento del filtro</item>
        <item>Instalar el nuevo filtro y verificar el rendimiento</item>
        
        <item>Inspeccionar el tubo de escape y conexiones</item>
        <item>Verificar fugas de gases y daños en el catalizador</item>
        <item>Realizar pruebas de emisiones</item>
        
        <item>Comprobar nivel y calidad del aceite de transmisión</item>
        <item>Inspeccionar la caja de cambios y engranajes</item>
        <item>Reemplazar discos de embrague desgastados</item>
        
        <item>Revisar compresor, condensador y ventiladores</item>
        <item>Comprobar y recargar el nivel de refrigerante</item>
        <item>Limpiar los conductos del aire acondicionado</item>
    </string-array>
    <string-array name="piezas_diagnosticos_array">
        <item>Pastillas de freno</item>
        <item>Líquido de frenos</item>
        <item>Filtro de aceite</item>
        <item>Aceite de motor</item>
        <item>Batería</item>
        <item>Pesas de equilibrado</item>
        <item>Fusibles</item>
        <item>Relés</item>
        <item>Amortiguadores</item>
        <item>Filtro de aire</item>
        <item>Silenciador</item>
        <item>Aceite de transmisión</item>
        <item>Gas refrigerante</item>
    </string-array>
    <string-array name="mensaje_notificacion_administrativo_array">
        <item>Hola</item>
        <item>Le comunicamos que el presupuesto para la reparación de su vehículo ya está disponible.</item>
        <item>El coste estimado es de </item>
        <item>€. Por favor, revise el presupuesto y confirme si acepta la reparación.</item>
        <item>Atentamente,
            Taller Robinauto.</item>
        <item>Paseo Juan Carlos I, Valladolid.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textoAltaBaja">Empleados</string>
    <string name="bienvenidaUsuario">Bienvenido</string>
    <string name="textoModificarUsuarios">Modificar usuario</string>
    <string name="textoAjustes">Ajustes</string>
    <string name="textoNotificaciones">Notificar cliente</string>
    <string name="textoAsiganarReparacionMecanicoJefe">Reparaciones</string>
    <string name="textoStockPiezas">Stock y Pedidos</string>
    <string name="textoPedidos">Pedidos</string>
    <string name="textoReparaciones">Reparaciones</string>
    <string name="textoDiagnosticos">Diagnósticos</string>
    <string name="textoTareas">Tareas</string>
    <string name="textoConsultarReparaciones">Consultas</string>
    <string name="textoPiezas">Piezas</string>
    <string name="textoPerfil">Perfil</string>
    <string name="textoTvbotonVolverIncioSesion">Ya tengo cuenta, volver a inicio de sesión</string>
    <string name="textoToolBarOpciones">Opciones</string>
    <string name="textoTema">Seleccionar tema</string>
    <string name="textoSalir">Salir</string>
    <string name="textoCerrarSesion">Cerrar sesión</string>
    <string name="textoTemaClaro">Tema claro</string>
    <string name="textoTemaOscuro">Tema Oscuro</string>
    <string name="textoActivadoOscuro">Activar modo oscuro</string>
    <string name="textoTemaPorDefecto">Tema por defecto</string>
    <string name="textoNombrApp">Taller Robinauto</string>
    <string name="abrir_navegacion">Abrir Navigation Drawer</string>
    <string name="cerrar_navegacion">Cerrar Navigation Drawer</string>
    <string name="textoContactar">Contactar con Robinauto</string>
    <string name="textoMenuPrincipal">Inicio</string>
    <string name="textoTyC">Términos y condiciones</string>
    <string name="slogan">Tu app, tu taller, tu tranquilidad</string>
    <string name="tituloCabeceraMenuPrincipal">Menu principal</string>
    <string name="tituloCabeceraPerfil">Perfil</string>
    <string name="tituloCabeceraAjustes">Ajustes</string>
    <string name="textoAdministrador">Administrador</string>
    <string name="textoHola">Bienvenido a Robinauto</string>
    <string name="textoAdministrativo">Administrativo</string>
    <string name="textoRegistroCoches">Registrar coches</string>
    <string name="textoMecanicoJefe">Mecánico jefe</string>
    <string name="textoMecanico">Mecánico</string>
    <string name="textoCliente">Selecciona el cliente</string>
    <string name="textoCorreoAcortado">Correo</string>
    <string name="textoAlta">Alta empleado</string>
    <string name="textoBaja">Baja Empleado</string>
    <string name="textoValidarCorreo">Foramto válido \'ejemplo@ejemplo.com\'</string>
    <string name="textoValidarContraseña">"Al menos 6 caracteres "</string>
    <string name="textoEliminar">Dar de baja</string>
    <string name="textoAltaBajaEmpleado">Alta y baja de empleados</string>
    <string name="textoGuardarModifCliente">Guardar cambios</string>
    <string name="textoModificarUsuariosUsuarios">Modificar usuarios</string>
    <string name="textoRegistroEntradaCoches">Registrar entrada de coche</string>
    <string name="textoMarcaCoche">Marca coche</string>
    <string name="textoModeloCoche">Modelo coche</string>
    <string name="textoCocheSeleccionado">Selecciona el coche</string>
    <string name="AsignarMj">Asignar mecánico jefe para diagnóstico</string>
    <string name="textoGuardarRegistro">Guardar registro</string>
    <string name="textoAltaReparacion">Dar de alta nueva reparación</string>
    <string name="textoReparacion">Reparación</string>
    <string name="textoEstadoReparacion">Estado reparación</string>
    <string name="textoMatricula">"Matrícula:  "</string>
    <string name="textoMatriculaCoche">Matrícula del coche</string>
    <string name="textoTipoReparacion">"Tipo de reparación:  "</string>
    <string name="textoEstadoRep">"Estado reparación:  "</string>
    <string name="textoPresupuestoReparacion">"Presupuesto:  "</string>
    <string name="textoFechaIReparacion">"Fecha inicio:  "</string>
    <string name="textoFechaFReparacion">"Fecha fin:  "</string>
    <string name="textoClienteReparacion">"Cliente:  "</string>
    <string name="textoMecanicosAsignado">Selecciona los mecánicos</string>
    <string name="nombreEmisorNotificacion">Nombre del emisor</string>
    <string name="correoEmisorNotificacion">correo@emisor.com</string>
    <string name="textoMensajeNotificacion">Este es el mensaje de la notificación</string>
    <string name="cantidadPieza">Stock: %d unidades</string>
    <string name="textoResponder">Responder</string>
    <string name="precioPieza">Precio: %.2f €</string>
    <string name="textoClienteUsuario">Cliente</string>
    <string name="textoSolicitaCantidadPiezas">Cantidad de piezas</string>
    <string name="textoGuardarSolicitar">Solicitar</string>
</resources>