<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewTerminosYCondiciones"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TextViews para realizar la redacción de los términos-->
        <TextView
            android:id="@+id/textViewIntroduccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCIntroduccion"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewUsoServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCUsoServicio"
            android:paddingBottom="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewPropiedadIntelectual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCPropiedadIntelectual"
            android:paddingBottom="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewPrivacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCPrivacidad"
            android:paddingBottom="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCContacto"
            android:paddingBottom="16dp"
            android:textSize="14sp" />

        <!-- Checkboxes de las condiciones a aceptar -->
        <CheckBox
            android:id="@+id/checkBoxUsoServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCCheckboxUsoYServicio" />

        <CheckBox
            android:id="@+id/checkBoxPropiedadIntelectual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCCheckboxPropiedadIntelectual" />

        <CheckBox
            android:id="@+id/checkBoxPrivacidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCCheckboxPrivacidad" />

        <CheckBox
            android:id="@+id/checkBoxPromociones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCCheckboxPromociones" />

        <CheckBox
            android:id="@+id/checkBoxAceptarTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoTyCCheckboxAceptarTodo" />
    </LinearLayout>

</ScrollView>