<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuPrincipalAdminFragment"
        android:icon="@drawable/ic_bienvenida"
        app:cnb_iconColor="@color/color_principal"
        app:cnb_textColor="@color/color_texto"
        android:title="@string/textoMenuPrincipal"/>

    <item
        android:id="@+id/opcionPefil"
        android:icon="@drawable/ic_nombre"
        android:title="@string/textoPerfil"/>


    <item
        android:id="@+id/opcionAjustes"
        android:icon="@drawable/ic_configuracion"
        android:title="@string/textoAjustes"/>



    <item
        android:id="@+id/gestionEmpleadosAdminFragment"
        android:icon="@drawable/ic_empleados"
        app:cnb_iconColor="@color/color_principal"
        app:cnb_textColor="@color/color_texto"
        android:title="@string/textoAltaBaja" />


    <item
        android:id="@+id/modificarUsuariosAdminFragment"
        android:icon="@drawable/ic_seleccionar_perfil"
        app:cnb_iconColor="@color/color_principal"
        app:cnb_textColor="@color/color_texto"
        android:title="@string/textoModificarUsuarios" />

</menu>