<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/fondo"
    android:padding="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCocheSeleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textoCocheSeleccionado"
        android:textColor="@color/color_principal"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_coche"
        android:drawablePadding="8dp"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinnerCocheNuevaReparacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:minHeight="48dp"
        android:background="@color/color_desactivado_fondo"
        android:text="@string/textoCliente"
        android:textColor="@color/color_texto"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewMostrarMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textoMarcaCoche"
        android:textColor="@color/negro"/>

    <TextView
        android:id="@+id/textViewmostrarModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textoModeloCoche"
        android:textColor="@color/negro"/>

    <TextView
        android:id="@+id/textViewMostrarMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textoMatriculaCoche"
        android:textColor="@color/negro"/>


    <TextView
        android:id="@+id/textViewMostrarCorreoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textoClienteUsuario"
        android:textColor="@color/negro"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_principal"/>


    <TextView
        android:id="@+id/textViewMecanicoAsignado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textoMecanicoJefe"
        android:textColor="@color/color_principal"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_nombre"
        android:drawablePadding="8dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewMostrarCorreoMecanicoJefe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textoMecanicoJefe"
        android:textSize="16sp"
        android:textColor="@color/negro"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_principal"/>

    <TextView
        android:id="@+id/textViewMecanico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textoMecanicosAsignado"
        android:textColor="@color/color_principal"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_mecanico"
        android:drawablePadding="8dp"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinnerMecanicoNuevaReparacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_desactivado_fondo"
        android:minHeight="48dp" />

    <LinearLayout
        android:id="@+id/linearLayoutCorreosMecanicos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

    </LinearLayout>

    </LinearLayout>

</ScrollView>
