<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:cardCornerRadius="35dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/color_notificacion">

        <TextView
            android:id="@+id/textViewNombreEmisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreEmisorNotificacion"
            android:textColor="@color/color_texto"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCorreoEmisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correoEmisorNotificacion"
            android:textColor="@color/color_texto"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/textViewMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoMensajeNotificacion"
            android:textColor="@color/color_texto"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResponderNotificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoResponder"
            android:textColor="@color/fondo"
            android:backgroundTint="@color/color_texto"
            android:layout_marginTop="16dp"
            app:cornerRadius="30dp"
            android:layout_gravity="end" />

    </LinearLayout>

</androidx.cardview.widget.CardView>