<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <RadioGroup
        android:id="@+id/radioGroupTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/radioButtonTemaOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_principal"
            android:text="@string/textoTemaOscuro" />

        <RadioButton
            android:id="@+id/radioButtonTemaClaro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_principal"
            android:text="@string/textoTemaClaro" />

        <RadioButton
            android:id="@+id/radioButtonTemaPorDefecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTemaPorDefecto"
            android:buttonTint="@color/color_principal"
            android:checked="true" />
    </RadioGroup>
</LinearLayout>
