<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/img_fondo_degradado">

    <ImageView
        android:id="@+id/imageViewPieza"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:src="@drawable/pieza" />

    <TextView
        android:id="@+id/textViewNombrePieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoPiezas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/color_texto"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewCantidadPieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidadPieza"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/color_texto"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewPrecioPieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precioPieza"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/color_texto"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCantidadSolicitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCantidadSolicitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/fondo"
            android:gravity="center"
            android:visibility="visible"
            android:inputType="number"
            android:hint="@string/textoSolicitaCantidadPiezas" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSolicitarPieza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:elevation="8dp"
        android:padding="8dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/azul"
        android:text="@string/textoGuardarSolicitar"
        android:textColor="@color/color_texto"/>

</LinearLayout>