<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_marginTop="20dp"
    android:padding="20dp"
    android:background="@color/fondo"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewNombreApp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="start"
        android:background="@drawable/img_fondo_forma_superior_izquierda"
        android:text="@string/textoNombrApp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/color_texto"/>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imageViewPerfilCabecera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_nombre"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewNombreUsuarioCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoNombre"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/color_texto"/>

    <TextView
        android:id="@+id/textViewCorreoUsuarioCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="5dp"
        android:text="@string/textoCorreo"
        android:textColor="@color/color_texto"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
